--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -20,6 +20,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "multer": "1.4.5-lts.2",
+    "path-to-regexp": "^6.3.0",
     "pizzip": "^3.2.0"
   },
   "devDependencies": {
