--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,10 @@ MONGO_URI=mongodb+srv://2302069:Zaldivar56@fas-reports.j1tyhzz.mongodb.net/?retr
 
 # JWT Configuración
 JWT_SECRET=reports-v2-jwt-secret-key-production-change-this-in-railway-12345
-# Tiempo de expiración del JWT (1d = 1 día, 7d = 7 días, 1h = 1 hora)
-JWT_EXPIRES_IN=1h
+# Tiempo de expiración del JWT 
+# Opciones comunes: 15m, 30m, 1h, 8h, 1d, 3d, 7d, 14d, 30d, 90d, 1y
+# Recomendado para apps corporativas: 7d
+JWT_EXPIRES_IN=7d
 
 # Variables del entorno
 NODE_ENV=production
